--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/mjamesruggiero/midge#readme",
   "devDependencies": {
     "mocha": "3.4.2"
+  },
+  "dependencies": {
+    "zeromq": "4.2.1"
   }
 }
